FIX: Hide body overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,8 @@
 .webflow-placeholder {
   display: none;
 }
+
+body {
+  max-width: 100%;
+  overflow: none;
+}
